feat: read from bucket
