# src/main/java/org/broadinstitute/consent/http/resources/OntologyAdminResource.java
@@ -6,13 +6,11 @@ import jakarta.annotation.security.RolesAllowed;
 import jakarta.ws.rs.Consumes;
 import jakarta.ws.rs.POST;
 import jakarta.ws.rs.Path;
+import jakarta.ws.rs.QueryParam;
 import jakarta.ws.rs.core.MediaType;
 import jakarta.ws.rs.core.Response;
-import java.io.InputStream;
 import org.broadinstitute.consent.http.models.DuosUser;
 import org.broadinstitute.consent.http.service.OntologyService;
-import org.glassfish.jersey.media.multipart.FormDataContentDisposition;
-import org.glassfish.jersey.media.multipart.FormDataParam;
 
 @Path("api/ontology")
 public class OntologyAdminResource extends Resource {
@@ -29,10 +27,10 @@ public class OntologyAdminResource extends Resource {
   @RolesAllowed({ADMIN})
   public Response indexOntologyTerms(
       @Auth DuosUser duosUser,
-      @FormDataParam("file") InputStream uploadedInputStream,
-      @FormDataParam("file") FormDataContentDisposition fileDetails) {
+      @QueryParam("fileName") String fileName,
+      @QueryParam("fileType") String fileType) {
     try {
-      ontologyService.indexOntology(duosUser.getUser(), uploadedInputStream, "DOID");
+      ontologyService.indexOntology(duosUser.getUser(), fileName, fileType);
       return Response.ok().build();
     } catch (Exception e) {
       return createExceptionResponse(e);
