# src/main/resources/assets/api-docs.yaml
@@ -906,18 +906,20 @@ paths:
     post:
         summary: Index Ontology
         description: Index Ontology
-        requestBody:
-          description: Ontology Index file to upload
-          required: true
-          content:
-            multipart/form-data:
-              schema:
-                type: object
-                properties:
-                  file:
-                    description: Ontology file to upload
-                    type: string
-                    format: binary
+        parameters:
+          - name: fileName
+            in: query
+            description: The name of the ontology file to index.
+            required: true
+            schema:
+              type: string
+          - name: fileType
+            in: query
+            description: The type of the ontology file to index
+            required: true
+            schema:
+              type: string
+              enum: [ DOID, DUOS, DUO ]
         tags:
             - Admin
             - Ontology
